<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_black_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_d3d_small_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_perfil_activo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_activo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_disenio_impresion_scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disenio_impresion_scanner"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_contratista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_contratista" />

            <RatingBar
                android:id="@+id/ratingBar_contratista"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:numStars="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="70sp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_trabajador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_trabajador" />

            <RatingBar
                android:id="@+id/ratingBar_trabajador"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:numStars="5" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_experiencia_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/experiencia_perfil"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_como_vas"
                style="@style/boton_perfil"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/dashboard_black"
                android:gravity="left|center_vertical"
                android:text="@string/como_vas" />

            <Button
                android:id="@+id/b_historial"
                style="@style/boton_perfil"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/trophy_black"
                android:gravity="left|center_vertical"
                android:text="@string/historial" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_portafolios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/portafolios"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/b_editar_perfil"
        style="@style/boton_perfil"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/edit_black"
        android:gravity="left|center_vertical"
        android:text="@string/editar_perfil" />

</LinearLayout>